[package]
name = "object_store_s3_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = { version = "0.56.1", default-features = false }
aws-sdk-s3 = { version = "0.31.1", default-features = false }
aws-smithy-types = "0.56.1"
aws-types = { version = "0.56.1", default-features = false }
bytes = "1.5"
chrono = "0.4"
futures = "0.3"
http = "0.2"
object_store = "0.7"
thiserror = "1"
tokio = "1"
