[package]
name = "object_store_s3_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
async-trait = "0.1"
aws-config = { version = "0.56.1", default-features = false }
aws-credential-types = "0.56.1"
aws-sdk-s3 = { version = "0.31.1", default-features = false }
aws-smithy-async = "0.56.1"
aws-smithy-http = "0.56.1"
aws-smithy-types = "0.56.1"
aws-types = { version = "0.56.1", default-features = false }
bytes = "1.5"
chrono = { version = "0.4", default-features = false }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
http = "0.2"
js-sys = "0.3"
object_store = { version = "0.7", default-features = false, features = ["cloud"] }
thiserror = "1"
tokio = "1"
tower = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Window", "Response", "Headers"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
